@@ -28,7 +28,7 @@ static void post_insn_callback(UNUSED void *state, UNUSED uint32_t address)
     post_insn_count++;
 }
 
-static PPCState *sc_handler(PPCState *state)
+static PPCState *sc_handler(PPCState *state, UNUSED uint32_t insn)
 {
     return state;
 }
