@@ -18,9 +18,10 @@
 static uint32_t sc_r3;  // Value of r3 at sc instruction.
 static uint32_t sc_nia;  // Value of NIA at sc instruction.
 
-static PPCState *sc_handler(PPCState *state)
+static PPCState *sc_handler(PPCState *state, uint32_t insn)
 {
     ASSERT(state);
+    ASSERT(insn == 0x44000002);
 
     sc_r3 = state->gpr[3];
     sc_nia = state->nia;
