@@ -26,24 +26,25 @@ static const char expected[] =
     "    2: LOAD_IMM   r3, 4\n"
     "    3: SET_ALIAS  a1, r3\n"
     "    4: LOAD       r4, 984(r1)\n"
-    "    5: CALL       r5, @r4, r1\n"
-    "    6: LOAD_IMM   r6, 0x2\n"
-    "    7: LOAD_IMM   r7, 0\n"
-    "    8: CALL_TRANSPARENT @r6, r5, r7\n"
-    "    9: RETURN     r5\n"
-    "   10: LOAD_IMM   r8, 4\n"
-    "   11: SET_ALIAS  a1, r8\n"
-    "   12: LOAD_IMM   r9, 0x2\n"
-    "   13: LOAD_IMM   r10, 0\n"
-    "   14: CALL_TRANSPARENT @r9, r1, r10\n"
-    "   15: LOAD_IMM   r11, 4\n"
-    "   16: SET_ALIAS  a1, r11\n"
-    "   17: RETURN     r1\n"
+    "    5: LOAD_IMM   r5, 0x44000002\n"
+    "    6: CALL       r6, @r4, r1, r5\n"
+    "    7: LOAD_IMM   r7, 0x2\n"
+    "    8: LOAD_IMM   r8, 0\n"
+    "    9: CALL_TRANSPARENT @r7, r6, r8\n"
+    "   10: RETURN     r6\n"
+    "   11: LOAD_IMM   r9, 4\n"
+    "   12: SET_ALIAS  a1, r9\n"
+    "   13: LOAD_IMM   r10, 0x2\n"
+    "   14: LOAD_IMM   r11, 0\n"
+    "   15: CALL_TRANSPARENT @r10, r1, r11\n"
+    "   16: LOAD_IMM   r12, 4\n"
+    "   17: SET_ALIAS  a1, r12\n"
+    "   18: RETURN     r1\n"
     "\n"
     "Alias 1: int32 @ 964(r1)\n"
     "\n"
-    "Block 0: <none> --> [0,9] --> <none>\n"
-    "Block 1: <none> --> [10,17] --> <none>\n"
+    "Block 0: <none> --> [0,10] --> <none>\n"
+    "Block 1: <none> --> [11,18] --> <none>\n"
     ;
 
 #include "tests/rtl-disasm-test.i"
