@@ -24,16 +24,17 @@ static const char expected[] =
     "    2: LOAD_IMM   r3, 4\n"
     "    3: SET_ALIAS  a1, r3\n"
     "    4: LOAD       r4, 984(r1)\n"
-    "    5: CALL       r5, @r4, r1\n"
-    "    6: RETURN     r5\n"
-    "    7: LOAD_IMM   r6, 4\n"
-    "    8: SET_ALIAS  a1, r6\n"
-    "    9: RETURN     r1\n"
+    "    5: LOAD_IMM   r5, 0x44000002\n"
+    "    6: CALL       r6, @r4, r1, r5\n"
+    "    7: RETURN     r6\n"
+    "    8: LOAD_IMM   r7, 4\n"
+    "    9: SET_ALIAS  a1, r7\n"
+    "   10: RETURN     r1\n"
     "\n"
     "Alias 1: int32 @ 964(r1)\n"
     "\n"
-    "Block 0: <none> --> [0,6] --> <none>\n"
-    "Block 1: <none> --> [7,9] --> <none>\n"
+    "Block 0: <none> --> [0,7] --> <none>\n"
+    "Block 1: <none> --> [8,10] --> <none>\n"
     ;
 
 #include "tests/rtl-disasm-test.i"
