@@ -16,6 +16,8 @@ Changes:
   PSB pointer.  This may be a pointer to a different PSB, such as when a
   virtual system call migrated the calling thread to a different virtual
   processor.
+- The PowerPC sc handler function now receives the instruction word that
+  triggered the sc exception as a second parameter.
 
 Bug fixes:
 - Fixed a wrong-code bug triggered by over-optimization of RTL SELECT
